--- a/public/a/index.html
+++ b/public/a/index.html
@@ -34,12 +34,17 @@
 								<li><a href="#/view">查看讲座</a></li>
 								<li><a href="#/audience">听众列表</a></li>
 								<li><a href="#/share">共享文件</a></li>
-								<li><a href="#/votes">投票管理</a></li>
-								<li><a href="#/qna">提问管理</a></li>
-								<li><a href="#/lotterys">抽奖管理</a></li>
+								<li><a href="#/votes">投票列表</a></li>
+								<li><a href="#/qna">讲座提问</a></li>
+								<li><a href="#/lotterys">讲座抽奖</a></li>
 							</ul>
 							<ul class="nav navbar-nav navbar-right">
-								<li></li>
+								<li>
+									<a>
+										<i class="glyphicon glyphicon-user"></i>
+										<span id="username"></span>
+									</a>
+								</li>
 							</ul>
 						</div>
 					</section>
