--- a/public/s/index.html
+++ b/public/s/index.html
@@ -40,7 +40,12 @@
 								<li><a href="#/lotterys">抽奖管理</a></li>
 							</ul>
 							<ul class="nav navbar-nav navbar-right">
-								<li></li>
+								<li>
+									<a>
+										<i class="glyphicon glyphicon-user"></i>
+										<span id="username"></span>
+									</a>
+								</li>
 							</ul>
 						</div>
 					</section>
