--- a/public/a/audience.html
+++ b/public/a/audience.html
@@ -1,49 +1,47 @@
 
 
 <div id="main-wrapper">
-    <h1>听众列表</h1>
-    <table id="table-audience" class="table table-striped">
-        <thead>
-        <tr>
-            <th>昵称</th>
-            <th>在线时长</th>
-        </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
+	<h1>听众列表</h1>
+	<table id="table-audience" class="table table-striped">
+		<thead>
+		<tr>
+			<th>昵称</th>
+			<th>在线时长</th>
+		</tr>
+		</thead>
+		<tbody></tbody>
+	</table>
 </div>
 
 <script>
-    var $tableAudience = $('#table-audience');
+	var $tableAudience = $('#table-audience');
 
-    updateAudienceList();
+	updateAudienceList();
 
-    function updateAudienceList() {
-        var $tbody = $tableAudience.find('tbody');
-        $.ajax({
-            type: 'get',
-            url: '/do/a/audiencelist',
-            success: function(resObj) {
-                if (! resObj['ok']) {
-                    return alert('听众列表获取失败');
-                }
-                var audienceList = resObj['audienceList'],
-                        tbodyHtml = audienceList.length ? _.reduce(audienceList, function(memo, audience) {
-                            return memo + [
-                                '<tr>',
-                                    '<td>' + audience.name + '</td>',
-                                    '<td>' + strTime(Date.now() - audience.jointime, true) + '</td>',
-                                '</tr>'
-                            ].join('');
-                        }, '') : [
-                            '<tr>',
-                            '<td colspan="2">没有记录</td>',
-                            '</tr>'
-                        ].join('');
-                $tbody.html(tbodyHtml);
-            }
-        });
-    }
+	function updateAudienceList() {
+		var $tbody = $tableAudience.find('tbody');
+		$.get('/do/a/audiencelist', function(resObj){
+			var ok = resObj['ok'], msg = resObj['msg'];
+			msg && notify(msg, ok);
+			if (! ok) return;
+			var audienceList = resObj['audienceList'];
+			if (! audienceList.length) {
+				return $tbody.html([
+					'<tr>',
+						'<td colspan="2">没有记录</td>',
+					'</tr>'
+				].join(''));
+			}
+			$tbody.html(_.reduce(audienceList, function(memo, audience){
+				return memo + [
+					'<tr>',
+						'<td>' + audience.name + '</td>',
+						'<td>' + strTime(Date.now() - audience.jointime, true) + '</td>',
+					'</tr>'
+				].join('');
+			}, ''));
+		});
+	}
 </script>
 
 
