--- a/public/a/view.html
+++ b/public/a/view.html
@@ -31,8 +31,6 @@
 
 <!-- js -->
 <script>
-	var hostUrl = 'http://baidu.com';
-
 	$.get('/do/a/view', function(resObj) {
 		var lectkey = resObj['lectkey'],
 			lectname = resObj['lectname'],
@@ -40,12 +38,14 @@
 		$('#lectkey').text(lectkey);
 		$('#lectname').text(lectname);
 		$('#audiname').text(audiname);
+		$navbar.find('#username').text(audiname);
 	});
 
-	$('#btn-exit').on('click', function() {
+	$('#btn-exit').on('click', function(){
 		$.get('/do/a/exit', function(resObj) {
-			alert(resObj['msg'])
-			if (resObj['ok']) {
+			var ok = resObj['ok'], msg = resObj['msg'];
+			msg && notify(msg, ok);
+			if (ok) {
 				loadFrame('#/join');
 				$navbar.find('.sec').addClass('hidden')
 					.filter('#sec-out').removeClass('hidden');
