--- a/public/s/enter.html
+++ b/public/s/enter.html
@@ -31,12 +31,9 @@
 </div>
 
 
-
-<!-- js -->
-<script src="/lib/js/drawVerificationCode.js"></script>
 <script>
 	var $formEnter = $('#form-enter'),
-			$canvasVcode = $('#canvas-vcode');
+		$canvasVcode = $('#canvas-vcode');
 
 	$formEnter.ajaxForm({
 		type: 'post',
@@ -65,22 +62,15 @@
 				'action': 'enter'
 			},
 			success: function(resObj) {
-				$.ajax({
-					type: 'get',
-					url: '/do/vcode',
-					data: {
-						'action': 'enter'
-					},
-					success: function(resObj) {
-						if (! resObj['ok']) {
-							return notify('获取验证码失败', 0);
-						}
-						var vcodeInfo = resObj['vcodeInfo'],
-								num1 = vcodeInfo['num1'],
-								num2 = vcodeInfo['num2'],
-								oper = vcodeInfo['oper'];
-						$canvasVcode.drawVerificationCode(num1, num2, oper);
+				$.get('/do/vcode?action=user', function(resObj) {
+					if (! resObj['ok']) {
+						return notify('获取验证码失败', 0);
 					}
+					var vcodeInfo = resObj['vcodeInfo'],
+						num1 = vcodeInfo['num1'],
+						num2 = vcodeInfo['num2'],
+						oper = vcodeInfo['oper'];
+					$canvasVcode.drawVerificationCode(num1, num2, oper);
 				});
 			}
 		});
