--- a/public/s/enter.html
+++ b/public/s/enter.html
@@ -55,24 +55,17 @@
 	showValicode();
 
 	function showValicode() {
-		$.ajax({
-			type: 'get',
-			url: '/do/vcode',
-			data: {
-				'action': 'enter'
-			},
-			success: function(resObj) {
-				$.get('/do/vcode?action=user', function(resObj) {
-					if (! resObj['ok']) {
-						return notify('获取验证码失败', 0);
-					}
-					var vcodeInfo = resObj['vcodeInfo'],
-						num1 = vcodeInfo['num1'],
-						num2 = vcodeInfo['num2'],
-						oper = vcodeInfo['oper'];
-					$canvasVcode.drawVerificationCode(num1, num2, oper);
-				});
-			}
+		$.get('/do/vcode?action=enter', function(resObj) {
+			$.get('/do/vcode?action=enter', function(resObj) {
+				if (! resObj['ok']) {
+					return notify('获取验证码失败', 0);
+				}
+				var vcodeInfo = resObj['vcodeInfo'],
+					num1 = vcodeInfo['num1'],
+					num2 = vcodeInfo['num2'],
+					oper = vcodeInfo['oper'];
+				$canvasVcode.drawVerificationCode(num1, num2, oper);
+			});
 		});
 	}
 </script>
