--- a/public/s/enter.html
+++ b/public/s/enter.html
@@ -7,7 +7,7 @@
 			<div class="input-group">
 				<input type="text" class="form-control" name="lkey" placeholder="讲座序列号">
 				<span class="input-group-btn">
-					<button class="btn btn-primary" href="#/open">申请讲座</button>
+					<button class="btn btn-primary" href="#/open">开启讲座</button>
 				</span>
 			</div>
 		</div>
