--- a/public/s/index.html
+++ b/public/s/index.html
@@ -22,7 +22,7 @@
 						<div class="navbar-collapse collapse">
 							<ul class="nav navbar-nav">
 								<li><a href="#/enter">管理讲座</a></li>
-								<li><a href="#/open">申请讲座</a></li>
+								<li><a href="#/open">开启讲座</a></li>
 							</ul>
 							<ul class="nav navbar-nav navbar-right">
 								<li><a class="ex-link" href="/a">加入讲座</a></li>
