--- a/public/s/open.html
+++ b/public/s/open.html
@@ -1,10 +1,13 @@
 ﻿
 <div id="main-wrapper">
-	<h1>申请讲座</h1>
+	<h1>开启讲座</h1>
 
 	<form id="form-open">
 		<div class="form-group">
-            <input type="text" class="form-control" name="lname" placeholder="讲座名称">
+			<input type="text" class="form-control" name="lname" placeholder="讲座名称">
+			<span class="input-group-btn">
+				<button class="btn btn-primary" href="#/enter">管理讲座</button>
+			</span>
 		</div>
         <div class="form-group">
             <input type="text" class="form-control" name="lpwd" placeholder="管理密码">
