--- a/public/a/index.html
+++ b/public/a/index.html
@@ -65,6 +65,7 @@
 		<script src="/js/ajax-form.js"></script>
 		<script src="/js/drawPieChart.js"></script>
 		<script src="/js/drawVerificationCode.js"></script>
+        <script src="/js/takeoutAwardsList.js"></script>
 		<script src="/js/u.js"></script>
 		<script src="/js/a.js"></script>
 	</body>
