--- a/public/a/view.html
+++ b/public/a/view.html
@@ -23,6 +23,7 @@
 		<button href="#/share" class="btn btn-default btn-lg btn-block">共享文件</button>
 		<button href="#/votes" class="btn btn-default btn-lg btn-block">投票列表</button>
 		<button href="#/qna" class="btn btn-default btn-lg btn-block">讲座提问</button>
+        <button href="#/lotterys" class="btn btn-default btn-lg btn-block">讲座抽奖</button>
 		<button id="btn-exit" class="btn btn-danger btn-lg btn-block">退出空间</button>
 	</div>
 </div>
